# SkyMediaPlayer

./: .gitignore  LICENSE  README.md  settings.gradle.kts
app/: build.gradle.kts
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/main/: AndroidManifest.xml
app/src/main/java/imt/skymediaplayer/demo/: MainActivity.kt  SkyVideoActivity.kt
app/src/main/res/layout/: activity_layout.xml  main_activity_layout.xml
app/src/main/res/values/: strings.xml  themes.xml
doc/: online_video_feature.md  share.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
skymediaplayer/: .gitignore  build.gradle.kts  todo_list.txt
skymediaplayer/src/androidTest/java/imt/zw/skymediaplayer/: ExampleInstrumentedTest.kt
skymediaplayer/src/main/cpp/: CMakeLists.txt  skymediaplayer_jni.cpp
skymediaplayer/src/main/cpp/ffmpeg/include/: config.h
skymediaplayer/src/main/cpp/ffmpeg/include/libavutil/: ffversion.h  getenv_utf8.h  libm.h
skymediaplayer/src/main/cpp/ffmpeg/include/libffmpeg/: config.h
skymediaplayer/src/main/cpp/ffmpeg/include/libpostproc/: postprocess.h  version.h
skymediaplayer/src/main/cpp/ffplay/: cmdutils.c  cmdutils.h  ffplay.c  ffplay.h  opt_common.c  opt_common.h  sky_ffplay.c  sky_ffplay.h
skymediaplayer/src/main/cpp/include/: logger.h  sky_messages.h  skymediaplayer_interface.h
skymediaplayer/src/main/cpp/player/: sky_egl2_renderer_nv12.cpp  sky_egl2_renderer_nv12.h  sky_egl2_renderer_nv21.cpp  sky_egl2_renderer_nv21.h  sky_egl2_renderer_rgba.cpp  sky_egl2_renderer_rgba.h  sky_egl2_renderer_yuv420p.cpp  sky_egl2_renderer_yuv420p.h  sky_egl2_renderer_yuv422p.cpp  sky_egl2_renderer_yuv422p.h  sky_msg_queue.cpp  sky_msg_queue.h  skyaudio.cpp  skyaudio.h  skymediaplayer.cpp  skymediaplayer.h  skyrenderer.cpp  skyrenderer.h
skymediaplayer/src/main/cpp/sdl/include/SDL3/: SDL_assert.h  SDL_asyncio.h  SDL_audio.h  SDL_camera.h  SDL_clipboard.h  SDL_dialog.h  SDL_egl.h  SDL_error.h  SDL_events.h  SDL_gamepad.h  SDL_gpu.h  SDL_guid.h  SDL_haptic.h  SDL_hidapi.h  SDL_hints.h  SDL_init.h  SDL_iostream.h  SDL_joystick.h  SDL_keyboard.h  SDL_loadso.h  SDL_main.h  SDL_misc.h  SDL_mutex.h  SDL_opengl.h  SDL_opengles2_gl2ext.h  SDL_pen.h  SDL_process.h  SDL_properties.h  SDL_render.h  SDL_sensor.h  SDL_stdinc.h  SDL_storage.h  SDL_surface.h  SDL_test_crc32.h  SDL_test_fuzzer.h  SDL_test_harness.h  SDL_test_log.h  SDL_test_md5.h  SDL_thread.h  SDL_time.h  (+4 more)
skymediaplayer/src/main/java/imt/zw/skymediaplayer/audio/: AudioFocusManager.kt
skymediaplayer/src/main/java/imt/zw/skymediaplayer/player/: IMediaPlayer.kt  SkyMediaPlayer.kt
skymediaplayer/src/main/java/imt/zw/skymediaplayer/utils/: Utils.kt
skymediaplayer/src/main/java/imt/zw/skymediaplayer/widget/: SkyVideoView.kt  SurfaceRenderView.kt  VideoSizeCalculator.kt
skymediaplayer/src/test/java/imt/zw/skymediaplayer/: ExampleUnitTest.kt
